[gd_scene load_steps=21 format=2]

[ext_resource path="res://scenes/enviroment/BasicTilemap.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/NPC.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://dialogue/DialoguePlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/enviroment/Stairs.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/enviroment/Board.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/enemies/OrcMini.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/enviroment/Skull.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/enviroment/enemies/EnemyCollision.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/levels/ScriptedPath.gd" type="Script" id=10]
[ext_resource path="res://scenes/levels/Level4.gd" type="Script" id=11]
[ext_resource path="res://scenes/enviroment/Trap.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/enviroment/Torch.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/enemies/OrcBasic.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/levels/trigger_hidden_passage.gd" type="Script" id=15]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 64, 56, 0, 0, 0, 0, 120, 96 )
}

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="RectangleShape2D" id=5]

[node name="Level4" type="Node2D"]
script = ExtResource( 11 )

[node name="BasicTilemap" parent="." instance=ExtResource( 1 )]
position = Vector2( -16, -160 )
tile_data = PoolIntArray( 131086, 0, 0, 131087, 0, 1, 131088, 0, 1, 131089, 0, 1, 131090, 0, 2, 196622, 0, 65536, 196623, 0, 65537, 196624, 0, 65537, 196625, 0, 65537, 196626, 0, 65540, 196627, 0, 1, 196628, 0, 1, 196629, 0, 1, 196630, 0, 1, 196631, 0, 1, 196632, 0, 1, 196633, 0, 1, 196634, 0, 1, 196635, 0, 1, 196636, 0, 1, 196637, 0, 1, 196638, 0, 1, 196639, 0, 1, 196640, 0, 1, 196641, 0, 1, 196642, 0, 1, 196643, 0, 1, 196644, 0, 1, 196645, 0, 1, 196646, 0, 1, 196647, 0, 1, 196648, 0, 1, 196649, 0, 1, 196650, 0, 1, 196651, 0, 1, 196652, 0, 1, 196653, 0, 1, 196654, 0, 1, 196655, 0, 1, 196656, 0, 2, 262158, 0, 65536, 262159, 0, 65537, 262160, 0, 65537, 262161, 0, 65537, 262162, 0, 65537, 262163, 0, 65537, 262164, 0, 65537, 262165, 0, 65537, 262166, 0, 65537, 262167, 0, 65537, 262168, 0, 65537, 262169, 0, 65537, 262170, 0, 65537, 262171, 0, 65537, 262172, 0, 65537, 262173, 0, 65537, 262174, 0, 65537, 262175, 0, 65537, 262176, 0, 65537, 262177, 0, 65537, 262178, 0, 65537, 262179, 0, 65537, 262180, 0, 65537, 262181, 0, 65537, 262182, 0, 65537, 262183, 0, 65537, 262184, 0, 65537, 262185, 0, 65537, 262186, 0, 65537, 262187, 0, 65537, 262188, 0, 262154, 262189, 0, 65537, 262190, 0, 65537, 262191, 0, 196618, 262192, 0, 65538, 327694, 0, 65536, 327695, 0, 65537, 327696, 0, 65537, 327697, 0, 65537, 327698, 0, 65537, 327699, 0, 65537, 327700, 0, 262154, 327701, 0, 65537, 327702, 0, 65537, 327703, 0, 65537, 327704, 0, 65537, 327705, 0, 65537, 327706, 0, 65537, 327707, 0, 65537, 327708, 0, 65537, 327709, 0, 65537, 327710, 0, 65537, 327711, 0, 65537, 327712, 0, 65537, 327713, 0, 65537, 327714, 0, 65537, 327715, 0, 65537, 327716, 0, 65537, 327717, 0, 65537, 327718, 0, 65537, 327719, 0, 65537, 327720, 0, 65537, 327721, 0, 65537, 327722, 0, 65537, 327723, 0, 65537, 327724, 0, 65537, 327725, 0, 65537, 327726, 0, 65537, 327727, 0, 65537, 327728, 0, 65538, 393230, 0, 131072, 393231, 0, 131073, 393232, 0, 131073, 393233, 0, 131073, 393234, 0, 131073, 393235, 0, 131073, 393236, 0, 131073, 393237, 0, 131073, 393238, 0, 131073, 393239, 0, 131073, 393240, 0, 131073, 393241, 0, 131073, 393242, 0, 131073, 393243, 0, 131073, 393244, 0, 131073, 393245, 0, 131073, 393246, 0, 131073, 393247, 0, 131073, 393248, 0, 131073, 393249, 0, 131073, 393250, 0, 131073, 393251, 0, 131073, 393252, 0, 131073, 393253, 0, 131073, 393254, 0, 131073, 393255, 0, 131073, 393256, 0, 131073, 393257, 0, 131073, 393258, 0, 131073, 393259, 0, 131073, 393260, 0, 131073, 393261, 0, 5, 393262, 0, 65537, 393263, 0, 65537, 393264, 0, 65538, 458797, 0, 65536, 458798, 0, 65537, 458799, 0, 196618, 458800, 0, 65538, 524333, 0, 65536, 524334, 0, 65537, 524335, 0, 65537, 524336, 0, 65538, 589869, 0, 65536, 589870, 0, 65537, 589871, 0, 65537, 589872, 0, 65538, 655405, 0, 65536, 655406, 0, 65537, 655407, 0, 65537, 655408, 0, 65538, 720896, 0, 0, 720897, 0, 1, 720898, 0, 1, 720899, 0, 1, 720900, 0, 1, 720901, 0, 1, 720902, 0, 2, 720941, 0, 65536, 720942, 0, 65537, 720943, 0, 65537, 720944, 0, 65538, 786432, 0, 65536, 786433, 0, 65537, 786434, 0, 65537, 786435, 0, 65537, 786436, 0, 65537, 786437, 0, 65537, 786438, 0, 65540, 786439, 0, 2, 786477, 0, 65536, 786478, 0, 65537, 786479, 0, 196618, 786480, 0, 65538, 851968, 0, 65536, 851969, 0, 65537, 851970, 0, 65537, 851971, 0, 65537, 851972, 0, 65537, 851973, 0, 65537, 851974, 0, 65537, 851975, 0, 65540, 851976, 0, 2, 852013, 0, 65536, 852014, 0, 65537, 852015, 0, 65537, 852016, 0, 65538, 917504, 0, 131072, 917505, 0, 131073, 917506, 0, 131073, 917507, 0, 5, 917508, 0, 65537, 917509, 0, 262154, 917510, 0, 65537, 917511, 0, 65537, 917512, 0, 65540, 917513, 0, 2, 917516, 0, 0, 917517, 0, 1, 917518, 0, 1, 917519, 0, 2, 917521, 0, 0, 917522, 0, 1, 917523, 0, 1, 917524, 0, 2, 917526, 0, 0, 917527, 0, 1, 917528, 0, 1, 917529, 0, 2, 917535, 0, 0, 917536, 0, 1, 917537, 0, 1, 917538, 0, 1, 917539, 0, 1, 917540, 0, 2, 917542, 0, 0, 917543, 0, 1, 917544, 0, 1, 917545, 0, 1, 917546, 0, 1, 917547, 0, 2, 917549, 0, 65536, 917550, 0, 65537, 917551, 0, 196618, 917552, 0, 65538, 983043, 0, 131072, 983044, 0, 5, 983045, 0, 65537, 983046, 0, 65537, 983047, 0, 65537, 983048, 0, 65537, 983049, 0, 65540, 983050, 0, 1, 983051, 0, 1, 983052, 0, 65541, 983053, 0, 65537, 983054, 0, 65537, 983055, 0, 65540, 983056, 0, 1, 983057, 0, 65541, 983058, 0, 65537, 983059, 0, 65537, 983060, 0, 65540, 983061, 0, 1, 983062, 0, 65541, 983063, 0, 65537, 983064, 0, 65537, 983065, 0, 65540, 983066, 0, 1, 983067, 0, 1, 983068, 0, 1, 983069, 0, 1, 983070, 0, 1, 983071, 0, 65541, 983072, 0, 65537, 983073, 0, 65537, 983074, 0, 65537, 983075, 0, 65537, 983076, 0, 65540, 983077, 0, 1, 983078, 0, 65541, 983079, 0, 65537, 983080, 0, 65537, 983081, 0, 65537, 983082, 0, 65537, 983083, 0, 65540, 983084, 0, 1, 983085, 0, 65541, 983086, 0, 65537, 983087, 0, 65537, 983088, 0, 65538, 1048580, 0, 131072, 1048581, 0, 5, 1048582, 0, 65537, 1048583, 0, 65537, 1048584, 0, 65537, 1048585, 0, 65537, 1048586, 0, 65537, 1048587, 0, 65537, 1048588, 0, 65537, 1048589, 0, 65537, 1048590, 0, 65537, 1048591, 0, 65537, 1048592, 0, 65537, 1048593, 0, 65537, 1048594, 0, 65537, 1048595, 0, 65537, 1048596, 0, 65537, 1048597, 0, 65537, 1048598, 0, 65537, 1048599, 0, 65537, 1048600, 0, 65537, 1048601, 0, 65537, 1048602, 0, 65537, 1048603, 0, 65537, 1048604, 0, 65537, 1048605, 0, 65537, 1048606, 0, 65537, 1048607, 0, 65537, 1048608, 0, 65537, 1048609, 0, 65537, 1048610, 0, 65537, 1048611, 0, 65537, 1048612, 0, 65537, 1048613, 0, 65537, 1048614, 0, 65537, 1048615, 0, 65537, 1048616, 0, 65537, 1048617, 0, 196618, 1048618, 0, 262154, 1048619, 0, 65537, 1048620, 0, 65537, 1048621, 0, 65537, 1048622, 0, 65537, 1048623, 0, 65537, 1048624, 0, 65538, 1114117, 0, 131072, 1114118, 0, 5, 1114119, 0, 65537, 1114120, 0, 65537, 1114121, 0, 65537, 1114122, 0, 65537, 1114123, 0, 65537, 1114124, 0, 65537, 1114125, 0, 65537, 1114126, 0, 65537, 1114127, 0, 65537, 1114128, 0, 65537, 1114129, 0, 65537, 1114130, 0, 65537, 1114131, 0, 65537, 1114132, 0, 65537, 1114133, 0, 65537, 1114134, 0, 65537, 1114135, 0, 65537, 1114136, 0, 262154, 1114137, 0, 65537, 1114138, 0, 65537, 1114139, 0, 65537, 1114140, 0, 65537, 1114141, 0, 65537, 1114142, 0, 65537, 1114143, 0, 65537, 1114144, 0, 65537, 1114145, 0, 65537, 1114146, 0, 65537, 1114147, 0, 65537, 1114148, 0, 65537, 1114149, 0, 65537, 1114150, 0, 262154, 1114151, 0, 65537, 1114152, 0, 65537, 1114153, 0, 65537, 1114154, 0, 65537, 1114155, 0, 65537, 1114156, 0, 65537, 1114157, 0, 65537, 1114158, 0, 196618, 1114159, 0, 65537, 1114160, 0, 65538, 1179654, 0, 131072, 1179655, 0, 131073, 1179656, 0, 131073, 1179657, 0, 131073, 1179658, 0, 131073, 1179659, 0, 131073, 1179660, 0, 5, 1179661, 0, 65537, 1179662, 0, 65537, 1179663, 0, 4, 1179664, 0, 131073, 1179665, 0, 5, 1179666, 0, 65537, 1179667, 0, 262154, 1179668, 0, 4, 1179669, 0, 131073, 1179670, 0, 5, 1179671, 0, 65537, 1179672, 0, 65537, 1179673, 0, 4, 1179674, 0, 131073, 1179675, 0, 131073, 1179676, 0, 131073, 1179677, 0, 131073, 1179678, 0, 131073, 1179679, 0, 5, 1179680, 0, 65537, 1179681, 0, 262154, 1179682, 0, 65537, 1179683, 0, 65537, 1179684, 0, 4, 1179685, 0, 131073, 1179686, 0, 5, 1179687, 0, 65537, 1179688, 0, 65537, 1179689, 0, 65537, 1179690, 0, 65537, 1179691, 0, 4, 1179692, 0, 131073, 1179693, 0, 131073, 1179694, 0, 131073, 1179695, 0, 131073, 1179696, 0, 131074, 1245196, 0, 131072, 1245197, 0, 131073, 1245198, 0, 131073, 1245199, 0, 131074, 1245201, 0, 131072, 1245202, 0, 131073, 1245203, 0, 131073, 1245204, 0, 131074, 1245206, 0, 131072, 1245207, 0, 131073, 1245208, 0, 131073, 1245209, 0, 131074, 1245215, 0, 131072, 1245216, 0, 131073, 1245217, 0, 131073, 1245218, 0, 131073, 1245219, 0, 131073, 1245220, 0, 131074, 1245222, 0, 131072, 1245223, 0, 131073, 1245224, 0, 131073, 1245225, 0, 131073, 1245226, 0, 131073, 1245227, 0, 131074 )

[node name="BasicTilemap2" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( -16, -160 )
tile_data = PoolIntArray( 131086, 0, 0, 131087, 0, 1, 131088, 0, 1, 131089, 0, 1, 131090, 0, 2, 196622, 0, 65536, 196623, 0, 65537, 196624, 0, 65537, 196625, 0, 65537, 196626, 0, 65540, 196627, 0, 1, 196628, 0, 1, 196629, 0, 1, 196630, 0, 1, 196631, 0, 1, 196632, 0, 1, 196633, 0, 1, 196634, 0, 1, 196635, 0, 1, 196636, 0, 1, 196637, 0, 1, 196638, 0, 1, 196639, 0, 1, 196640, 0, 1, 196641, 0, 1, 196642, 0, 1, 196643, 0, 1, 196644, 0, 1, 196645, 0, 1, 196646, 0, 1, 196647, 0, 1, 196648, 0, 1, 196649, 0, 1, 196650, 0, 1, 196651, 0, 1, 196652, 0, 1, 196653, 0, 1, 196654, 0, 1, 196655, 0, 1, 196656, 0, 2, 262158, 0, 65536, 262159, 0, 65537, 262160, 0, 65537, 262161, 0, 65537, 262162, 0, 65537, 262163, 0, 65537, 262164, 0, 65537, 262165, 0, 65537, 262166, 0, 65537, 262167, 0, 65537, 262168, 0, 65537, 262169, 0, 65537, 262170, 0, 65537, 262171, 0, 65537, 262172, 0, 65537, 262173, 0, 65537, 262174, 0, 65537, 262175, 0, 65537, 262176, 0, 65537, 262177, 0, 65537, 262178, 0, 65537, 262179, 0, 65537, 262180, 0, 65537, 262181, 0, 65537, 262182, 0, 65537, 262183, 0, 65537, 262184, 0, 65537, 262185, 0, 65537, 262186, 0, 65537, 262187, 0, 65537, 262188, 0, 262154, 262189, 0, 65537, 262190, 0, 65537, 262191, 0, 196618, 262192, 0, 65538, 327694, 0, 65536, 327695, 0, 65537, 327696, 0, 65537, 327697, 0, 65537, 327698, 0, 65537, 327699, 0, 65537, 327700, 0, 262154, 327701, 0, 65537, 327702, 0, 65537, 327703, 0, 65537, 327704, 0, 65537, 327705, 0, 65537, 327706, 0, 65537, 327707, 0, 65537, 327708, 0, 65537, 327709, 0, 65537, 327710, 0, 65537, 327711, 0, 65537, 327712, 0, 65537, 327713, 0, 65537, 327714, 0, 65537, 327715, 0, 65537, 327716, 0, 65537, 327717, 0, 65537, 327718, 0, 65537, 327719, 0, 65537, 327720, 0, 65537, 327721, 0, 65537, 327722, 0, 65537, 327723, 0, 65537, 327724, 0, 65537, 327725, 0, 65537, 327726, 0, 65537, 327727, 0, 65537, 327728, 0, 65538, 393230, 0, 131072, 393231, 0, 131073, 393232, 0, 131073, 393233, 0, 5, 393234, 0, 65537, 393235, 0, 65537, 393236, 0, 4, 393237, 0, 131073, 393238, 0, 131073, 393239, 0, 131073, 393240, 0, 131073, 393241, 0, 131073, 393242, 0, 131073, 393243, 0, 131073, 393244, 0, 131073, 393245, 0, 131073, 393246, 0, 131073, 393247, 0, 131073, 393248, 0, 131073, 393249, 0, 131073, 393250, 0, 131073, 393251, 0, 131073, 393252, 0, 131073, 393253, 0, 131073, 393254, 0, 131073, 393255, 0, 131073, 393256, 0, 131073, 393257, 0, 131073, 393258, 0, 131073, 393259, 0, 131073, 393260, 0, 131073, 393261, 0, 5, 393262, 0, 65537, 393263, 0, 65537, 393264, 0, 65538, 458769, 0, 65536, 458770, 0, 65537, 458771, 0, 65537, 458772, 0, 65538, 458797, 0, 65536, 458798, 0, 65537, 458799, 0, 196618, 458800, 0, 65538, 524305, 0, 65536, 524306, 0, 65537, 524307, 0, 65537, 524308, 0, 65538, 524333, 0, 65536, 524334, 0, 65537, 524335, 0, 65537, 524336, 0, 65538, 589841, 0, 65536, 589842, 0, 65537, 589843, 0, 65537, 589844, 0, 65538, 589869, 0, 65536, 589870, 0, 65537, 589871, 0, 65537, 589872, 0, 65538, 655377, 0, 65536, 655378, 0, 65537, 655379, 0, 65537, 655380, 0, 65538, 655405, 0, 65536, 655406, 0, 65537, 655407, 0, 65537, 655408, 0, 65538, 720896, 0, 0, 720897, 0, 1, 720898, 0, 1, 720899, 0, 1, 720900, 0, 1, 720901, 0, 1, 720902, 0, 2, 720913, 0, 65536, 720914, 0, 262154, 720915, 0, 65537, 720916, 0, 65538, 720941, 0, 65536, 720942, 0, 65537, 720943, 0, 65537, 720944, 0, 65538, 786432, 0, 65536, 786433, 0, 65537, 786434, 0, 65537, 786435, 0, 65537, 786436, 0, 65537, 786437, 0, 65537, 786438, 0, 65540, 786439, 0, 2, 786449, 0, 65536, 786450, 0, 65537, 786451, 0, 65537, 786452, 0, 65538, 786477, 0, 65536, 786478, 0, 65537, 786479, 0, 196618, 786480, 0, 65538, 851968, 0, 65536, 851969, 0, 65537, 851970, 0, 65537, 851971, 0, 65537, 851972, 0, 65537, 851973, 0, 65537, 851974, 0, 65537, 851975, 0, 65540, 851976, 0, 2, 851985, 0, 65536, 851986, 0, 65537, 851987, 0, 196618, 851988, 0, 65538, 852013, 0, 65536, 852014, 0, 65537, 852015, 0, 65537, 852016, 0, 65538, 917504, 0, 131072, 917505, 0, 131073, 917506, 0, 131073, 917507, 0, 5, 917508, 0, 65537, 917509, 0, 262154, 917510, 0, 65537, 917511, 0, 65537, 917512, 0, 65540, 917513, 0, 2, 917516, 0, 0, 917517, 0, 1, 917518, 0, 1, 917519, 0, 2, 917521, 0, 65536, 917522, 0, 65537, 917523, 0, 65537, 917524, 0, 65538, 917526, 0, 0, 917527, 0, 1, 917528, 0, 1, 917529, 0, 2, 917535, 0, 0, 917536, 0, 1, 917537, 0, 1, 917538, 0, 1, 917539, 0, 1, 917540, 0, 2, 917542, 0, 0, 917543, 0, 1, 917544, 0, 1, 917545, 0, 1, 917546, 0, 1, 917547, 0, 2, 917549, 0, 65536, 917550, 0, 65537, 917551, 0, 196618, 917552, 0, 65538, 983043, 0, 131072, 983044, 0, 5, 983045, 0, 65537, 983046, 0, 65537, 983047, 0, 65537, 983048, 0, 65537, 983049, 0, 65540, 983050, 0, 1, 983051, 0, 1, 983052, 0, 65541, 983053, 0, 65537, 983054, 0, 65537, 983055, 0, 65540, 983056, 0, 1, 983057, 0, 65541, 983058, 0, 65537, 983059, 0, 65537, 983060, 0, 65540, 983061, 0, 1, 983062, 0, 65541, 983063, 0, 65537, 983064, 0, 65537, 983065, 0, 65540, 983066, 0, 1, 983067, 0, 1, 983068, 0, 1, 983069, 0, 1, 983070, 0, 1, 983071, 0, 65541, 983072, 0, 65537, 983073, 0, 65537, 983074, 0, 65537, 983075, 0, 65537, 983076, 0, 65540, 983077, 0, 1, 983078, 0, 65541, 983079, 0, 65537, 983080, 0, 65537, 983081, 0, 65537, 983082, 0, 65537, 983083, 0, 65540, 983084, 0, 1, 983085, 0, 65541, 983086, 0, 65537, 983087, 0, 65537, 983088, 0, 65538, 1048580, 0, 131072, 1048581, 0, 5, 1048582, 0, 65537, 1048583, 0, 65537, 1048584, 0, 65537, 1048585, 0, 65537, 1048586, 0, 65537, 1048587, 0, 65537, 1048588, 0, 65537, 1048589, 0, 65537, 1048590, 0, 65537, 1048591, 0, 65537, 1048592, 0, 65537, 1048593, 0, 65537, 1048594, 0, 65537, 1048595, 0, 65537, 1048596, 0, 65537, 1048597, 0, 65537, 1048598, 0, 65537, 1048599, 0, 65537, 1048600, 0, 65537, 1048601, 0, 65537, 1048602, 0, 65537, 1048603, 0, 65537, 1048604, 0, 65537, 1048605, 0, 65537, 1048606, 0, 65537, 1048607, 0, 65537, 1048608, 0, 65537, 1048609, 0, 65537, 1048610, 0, 65537, 1048611, 0, 65537, 1048612, 0, 65537, 1048613, 0, 65537, 1048614, 0, 65537, 1048615, 0, 65537, 1048616, 0, 65537, 1048617, 0, 196618, 1048618, 0, 262154, 1048619, 0, 65537, 1048620, 0, 65537, 1048621, 0, 65537, 1048622, 0, 65537, 1048623, 0, 65537, 1048624, 0, 65538, 1114117, 0, 131072, 1114118, 0, 5, 1114119, 0, 65537, 1114120, 0, 65537, 1114121, 0, 65537, 1114122, 0, 65537, 1114123, 0, 65537, 1114124, 0, 65537, 1114125, 0, 65537, 1114126, 0, 65537, 1114127, 0, 65537, 1114128, 0, 65537, 1114129, 0, 65537, 1114130, 0, 65537, 1114131, 0, 65537, 1114132, 0, 65537, 1114133, 0, 65537, 1114134, 0, 65537, 1114135, 0, 65537, 1114136, 0, 262154, 1114137, 0, 65537, 1114138, 0, 65537, 1114139, 0, 65537, 1114140, 0, 65537, 1114141, 0, 65537, 1114142, 0, 65537, 1114143, 0, 65537, 1114144, 0, 65537, 1114145, 0, 65537, 1114146, 0, 65537, 1114147, 0, 65537, 1114148, 0, 65537, 1114149, 0, 65537, 1114150, 0, 262154, 1114151, 0, 65537, 1114152, 0, 65537, 1114153, 0, 65537, 1114154, 0, 65537, 1114155, 0, 65537, 1114156, 0, 65537, 1114157, 0, 65537, 1114158, 0, 196618, 1114159, 0, 65537, 1114160, 0, 65538, 1179654, 0, 131072, 1179655, 0, 131073, 1179656, 0, 131073, 1179657, 0, 131073, 1179658, 0, 131073, 1179659, 0, 131073, 1179660, 0, 5, 1179661, 0, 65537, 1179662, 0, 65537, 1179663, 0, 4, 1179664, 0, 131073, 1179665, 0, 5, 1179666, 0, 65537, 1179667, 0, 262154, 1179668, 0, 4, 1179669, 0, 131073, 1179670, 0, 5, 1179671, 0, 65537, 1179672, 0, 65537, 1179673, 0, 4, 1179674, 0, 131073, 1179675, 0, 131073, 1179676, 0, 131073, 1179677, 0, 131073, 1179678, 0, 131073, 1179679, 0, 5, 1179680, 0, 65537, 1179681, 0, 262154, 1179682, 0, 65537, 1179683, 0, 65537, 1179684, 0, 4, 1179685, 0, 131073, 1179686, 0, 5, 1179687, 0, 65537, 1179688, 0, 65537, 1179689, 0, 65537, 1179690, 0, 65537, 1179691, 0, 4, 1179692, 0, 131073, 1179693, 0, 131073, 1179694, 0, 131073, 1179695, 0, 131073, 1179696, 0, 131074, 1245196, 0, 131072, 1245197, 0, 131073, 1245198, 0, 131073, 1245199, 0, 131074, 1245201, 0, 131072, 1245202, 0, 131073, 1245203, 0, 131073, 1245204, 0, 131074, 1245206, 0, 131072, 1245207, 0, 131073, 1245208, 0, 131073, 1245209, 0, 131074, 1245215, 0, 131072, 1245216, 0, 131073, 1245217, 0, 131073, 1245218, 0, 131073, 1245219, 0, 131073, 1245220, 0, 131074, 1245222, 0, 131072, 1245223, 0, 131073, 1245224, 0, 131073, 1245225, 0, 131073, 1245226, 0, 131073, 1245227, 0, 131074 )

[node name="Stairs" parent="." instance=ExtResource( 5 )]
position = Vector2( 264, -104 )

[node name="Skull" parent="." instance=ExtResource( 8 )]
position = Vector2( 747, 126 )

[node name="DialoguePlayer" parent="Skull" instance=ExtResource( 4 )]
dialogue_file = "res://dialogue/dialogue_data/level_4/skull.json"

[node name="checkpoints" type="Node" parent="."]

[node name="check_2" type="Area2D" parent="checkpoints"]
position = Vector2( 736, 110 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="checkpoints/check_2"]
shape = SubResource( 1 )

[node name="boards" type="Node" parent="."]

[node name="Board" parent="boards" instance=ExtResource( 6 )]
position = Vector2( 256, 96 )

[node name="DialoguePlayer" parent="boards/Board" instance=ExtResource( 4 )]
dialogue_file = "res://dialogue/dialogue_data/level_4/board_1.json"

[node name="enemy_collisions" type="Node" parent="."]

[node name="EnemyCollision2" parent="enemy_collisions" instance=ExtResource( 9 )]
position = Vector2( 272, -80 )

[node name="EnemyCollision3" parent="enemy_collisions" instance=ExtResource( 9 )]
position = Vector2( 424, -80 )

[node name="enemies" type="Node" parent="."]

[node name="OrcMini" parent="enemies" instance=ExtResource( 7 )]
position = Vector2( 288, 96 )
is_moving = false

[node name="OrcMini2" parent="enemies" instance=ExtResource( 7 )]
position = Vector2( 552, 88 )
moving_vertical = true

[node name="OrcMini4" parent="enemies" instance=ExtResource( 7 )]
position = Vector2( 512, 144 )
moving_vertical = true

[node name="OrcMini3" parent="enemies" instance=ExtResource( 7 )]
position = Vector2( 368, 142 )
is_moving = false

[node name="OrcMini5" parent="enemies" instance=ExtResource( 7 )]
position = Vector2( 736, -40 )
is_moving = false

[node name="Enemy" parent="enemies" instance=ExtResource( 14 )]
position = Vector2( 312, -80 )

[node name="npcs" type="Node" parent="."]

[node name="NPC_nearEnd" parent="npcs" instance=ExtResource( 2 )]
position = Vector2( 232, -72 )
is_start_left = false
deactivate = true

[node name="DialoguePlayer" parent="npcs/NPC_nearEnd" instance=ExtResource( 4 )]
dialogue_file = "res://dialogue/dialogue_data/level_4/npc_end.json"

[node name="Path2D" type="Path2D" parent="npcs"]
curve = SubResource( 2 )
script = ExtResource( 10 )
walk_speed_npc = 40.0

[node name="PathFollow2D" type="PathFollow2D" parent="npcs/Path2D"]
position = Vector2( 64, 56 )
rotate = false
loop = false

[node name="NPC_First" parent="npcs/Path2D/PathFollow2D" instance=ExtResource( 2 )]
visible = false
is_start_left = false
deactivate = true

[node name="DialoguePlayer" parent="npcs/Path2D/PathFollow2D/NPC_First" instance=ExtResource( 4 )]
dialogue_file = "res://dialogue/dialogue_data/level_4/npc_start.json"

[node name="torches" type="Node" parent="."]

[node name="Torch" parent="torches" instance=ExtResource( 13 )]
position = Vector2( 328, 88 )

[node name="Torch2" parent="torches" instance=ExtResource( 13 )]
position = Vector2( 584, 88 )

[node name="Torch3" parent="torches" instance=ExtResource( 13 )]
position = Vector2( 440, 88 )

[node name="Torch4" parent="torches" instance=ExtResource( 13 )]
position = Vector2( 704, -104 )

[node name="Torch5" parent="torches" instance=ExtResource( 13 )]
position = Vector2( 576, -104 )

[node name="Torch6" parent="torches" instance=ExtResource( 13 )]
position = Vector2( 448, -104 )

[node name="Torch7" parent="torches" instance=ExtResource( 13 )]
position = Vector2( 448, -104 )

[node name="Torch8" parent="torches" instance=ExtResource( 13 )]
position = Vector2( 320, -104 )

[node name="Torch9" parent="torches" instance=ExtResource( 13 )]
position = Vector2( 120, 72 )

[node name="trapes" type="Node" parent="."]

[node name="Trap" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 720, 48 )

[node name="Trap2" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 736, 48 )

[node name="Trap3" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 736, 16 )

[node name="Trap4" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 720, 16 )

[node name="Trap5" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 736, 80 )

[node name="Trap6" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 720, 80 )

[node name="Trap7" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 592, -64 )

[node name="Trap8" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 592, -80 )

[node name="Trap9" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 576, -64 )

[node name="Trap10" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 576, -80 )

[node name="Trap11" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 528, -80 )

[node name="Trap12" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 512, -80 )

[node name="Trap13" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 496, -80 )

[node name="Trap14" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 480, -64 )

[node name="Trap15" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 496, -64 )

[node name="Trap16" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 544, -64 )

[node name="Trap18" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 528, -64 )

[node name="Trap19" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 480, -80 )

[node name="Trap20" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 464, -64 )

[node name="Trap21" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 448, -80 )

[node name="Trap22" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 448, -64 )

[node name="Trap23" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 432, -80 )

[node name="Trap24" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 432, -64 )

[node name="Trap17" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 544, -80 )

[node name="triggers" type="Node" parent="."]

[node name="trigger1" type="Area2D" parent="triggers"]
position = Vector2( 120, 112 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="triggers/trigger1"]
position = Vector2( 40, 0 )
shape = SubResource( 3 )

[node name="trigger_change_map" type="Area2D" parent="triggers"]
position = Vector2( 632, -80 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="triggers/trigger_change_map"]
shape = SubResource( 4 )

[node name="trigger_hidden_passage" type="Area2D" parent="triggers"]
modulate = Color( 0.14902, 1, 0, 1 )
position = Vector2( 288, 74 )
collision_layer = 0
script = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="triggers/trigger_hidden_passage"]
shape = SubResource( 5 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 40, 48 )
[connection signal="body_entered" from="checkpoints/check_2" to="." method="_on_check_2_body_entered"]
[connection signal="dialogue_finished" from="npcs/NPC_nearEnd/DialoguePlayer" to="." method="_on_DialoguePlayer_dialogue_finished"]
[connection signal="path_ended" from="npcs/Path2D" to="." method="_on_Path2D_path_ended"]
[connection signal="dialogue_finished" from="npcs/Path2D/PathFollow2D/NPC_First/DialoguePlayer" to="." method="_on_DialoguePlayer_dialogue_finished"]
[connection signal="body_entered" from="triggers/trigger1" to="." method="_on_trigger1_body_entered"]
[connection signal="body_entered" from="triggers/trigger_change_map" to="." method="_on_trigger_change_map_body_entered"]
[connection signal="use_signal" from="triggers/trigger_hidden_passage" to="." method="_on_trigger_hidden_passage_use_signal"]
